Started Implementing Windows Service and mapping out command sturcture. Made changes to naming scheme OSLib is now OrbisLib

--- a/Executables/OrbisNeighborhood/OrbisNeighborhood.csproj
+++ b/Executables/OrbisNeighborhood/OrbisNeighborhood.csproj
@@ -36,6 +36,9 @@
     <Reference Include="DarkUI">
       <HintPath>..\..\Libraries\OSLib\bin\Debug\DarkUI.dll</HintPath>
     </Reference>
+    <Reference Include="OrbisLib">
+      <HintPath>..\..\Libraries\OrbisLib.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
