--- a/Libraries/OrbisLibCPP/OrbisLibCPP.vcxproj.filters
+++ b/Libraries/OrbisLibCPP/OrbisLibCPP.vcxproj.filters
@@ -26,7 +26,7 @@
     <ClCompile Include="stdafx.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="CPP-OSLib.cpp">
+    <ClCompile Include="OrbisLibCPP.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="dllmain.cpp">
