Started Implimenting C++ DLL for windows Service Implimented SocketListener Handler for handling socket requests from Target and from DLL Instance programs. Created ServiceClient class to manage DLL Instance programs. Created ServiceLib class to handle all commands and incoming signals from Target Console.

--- a/Executables/OrbisNeighborhood/OrbisNeighborhood.csproj
+++ b/Executables/OrbisNeighborhood/OrbisNeighborhood.csproj
@@ -33,10 +33,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="DarkUI">
-      <HintPath>..\..\Libraries\OSLib\bin\Debug\DarkUI.dll</HintPath>
+    <Reference Include="DarkUI, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\Libraries\DarkUI.dll</HintPath>
     </Reference>
-    <Reference Include="OrbisLib">
+    <Reference Include="OrbisLib, Version=1.0.0.0, Culture=neutral, processorArchitecture=AMD64">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\Libraries\OrbisLib.dll</HintPath>
     </Reference>
     <Reference Include="System" />
