Implementing OrbisServiceLib.dll
Made class for handling COM Ports
Made class for handling socket servers
Finished class for Client connections from executables
Setup code to work on listener for socket prints and commands from the target

--- a/Libraries/OrbisWindowsServiceLib/OrbisWindowsServiceLib.vcxproj
+++ b/Libraries/OrbisWindowsServiceLib/OrbisWindowsServiceLib.vcxproj
@@ -147,8 +147,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="SerialComHelper.h" />
     <ClInclude Include="ServiceClient.h" />
-    <ClInclude Include="ServiceLib.h" />
     <ClInclude Include="Sockets.h" />
     <ClInclude Include="SocketListener.h" />
     <ClInclude Include="stdafx.h" />
@@ -156,9 +156,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp" />
-    <ClCompile Include="OrbisWindowsServiceLib.cpp" />
+    <ClCompile Include="SerialComHelper.cpp" />
     <ClCompile Include="ServiceClient.cpp" />
-    <ClCompile Include="ServiceLib.cpp" />
     <ClCompile Include="Sockets.cpp" />
     <ClCompile Include="SocketListener.cpp" />
     <ClCompile Include="stdafx.cpp">
