--- a/Libraries/OrbisWindowsServiceLib/OrbisWindowsServiceLib.vcxproj.filters
+++ b/Libraries/OrbisWindowsServiceLib/OrbisWindowsServiceLib.vcxproj.filters
@@ -19,12 +19,6 @@
     <Filter Include="Source Files\Util">
       <UniqueIdentifier>{f9634ef6-2565-4493-877c-f2c9928d0f8d}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Source Files\Service">
-      <UniqueIdentifier>{12d642b4-e65a-4a9c-a18f-2f0cb64e0119}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Header Files\Service">
-      <UniqueIdentifier>{b62fa4d4-b9fa-4a48-930a-4420dbaf10e2}</UniqueIdentifier>
-    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h">
@@ -36,20 +30,17 @@
     <ClInclude Include="Sockets.h">
       <Filter>Header Files\Util</Filter>
     </ClInclude>
-    <ClInclude Include="ServiceLib.h">
-      <Filter>Header Files\Service</Filter>
+    <ClInclude Include="SocketListener.h">
+      <Filter>Header Files\Util</Filter>
+    </ClInclude>
+    <ClInclude Include="SerialComHelper.h">
+      <Filter>Header Files\Util</Filter>
     </ClInclude>
     <ClInclude Include="ServiceClient.h">
-      <Filter>Header Files\Service</Filter>
-    </ClInclude>
-    <ClInclude Include="SocketListener.h">
       <Filter>Header Files\Util</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="OrbisWindowsServiceLib.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="dllmain.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -59,13 +50,13 @@
     <ClCompile Include="Sockets.cpp">
       <Filter>Source Files\Util</Filter>
     </ClCompile>
-    <ClCompile Include="ServiceLib.cpp">
-      <Filter>Source Files\Service</Filter>
+    <ClCompile Include="SocketListener.cpp">
+      <Filter>Source Files\Util</Filter>
+    </ClCompile>
+    <ClCompile Include="SerialComHelper.cpp">
+      <Filter>Source Files\Util</Filter>
     </ClCompile>
     <ClCompile Include="ServiceClient.cpp">
-      <Filter>Source Files\Service</Filter>
-    </ClCompile>
-    <ClCompile Include="SocketListener.cpp">
       <Filter>Source Files\Util</Filter>
     </ClCompile>
   </ItemGroup>
