--- a/Libraries/OrbisLibCPP/OrbisLibCPP.vcxproj.filters
+++ b/Libraries/OrbisLibCPP/OrbisLibCPP.vcxproj.filters
@@ -19,13 +19,49 @@
     <Filter Include="Header Files\OrbisLib">
       <UniqueIdentifier>{fd1429b7-533a-462d-8181-375b55d6afc9}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Header Files\Util">
+      <UniqueIdentifier>{259ce1f5-cc50-45a1-9638-1a518ef53c03}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Util">
+      <UniqueIdentifier>{6f1912ed-eefb-42ce-abef-bec1fe250b94}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\sqlite3">
+      <UniqueIdentifier>{431edc8a-1d65-4c9a-b438-ef1f49508c0f}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\sqlite3">
+      <UniqueIdentifier>{f029a3d0-4b5b-4cb0-9be5-7deb0f35876a}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="stdafx.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="targetver.h">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="OrbisLib.hpp">
+      <Filter>Header Files\OrbisLib</Filter>
+    </ClInclude>
+    <ClInclude Include="OrbisDef.hpp">
+      <Filter>Header Files\OrbisLib</Filter>
+    </ClInclude>
+    <ClInclude Include="Sockets.hpp">
+      <Filter>Header Files\Util</Filter>
+    </ClInclude>
+    <ClInclude Include="Utilities.hpp">
+      <Filter>Header Files\Util</Filter>
+    </ClInclude>
+    <ClInclude Include="stdafx.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="sqlite3.h">
+      <Filter>Header Files\sqlite3</Filter>
+    </ClInclude>
+    <ClInclude Include="OrbisProc.hpp">
+      <Filter>Header Files\OrbisLib</Filter>
+    </ClInclude>
+    <ClInclude Include="OrbisTarget.hpp">
+      <Filter>Header Files\OrbisLib</Filter>
+    </ClInclude>
+    <ClInclude Include="OrbisDebugger.hpp">
+      <Filter>Header Files\OrbisLib</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -37,6 +73,27 @@
     </ClCompile>
     <ClCompile Include="dllmain.cpp">
       <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="OrbisLib.cpp">
+      <Filter>Source Files\OrbisLib</Filter>
+    </ClCompile>
+    <ClCompile Include="Utilities.cpp">
+      <Filter>Source Files\Util</Filter>
+    </ClCompile>
+    <ClCompile Include="Sockets.cpp">
+      <Filter>Source Files\Util</Filter>
+    </ClCompile>
+    <ClCompile Include="sqlite3.c">
+      <Filter>Source Files\sqlite3</Filter>
+    </ClCompile>
+    <ClCompile Include="OrbisProc.cpp">
+      <Filter>Source Files\OrbisLib</Filter>
+    </ClCompile>
+    <ClCompile Include="OrbisTarget.cpp">
+      <Filter>Source Files\OrbisLib</Filter>
+    </ClCompile>
+    <ClCompile Include="OrbisDebugger.cpp">
+      <Filter>Source Files\OrbisLib</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
