--- a/Libraries/OrbisLibCPP/OrbisLibCPP.vcxproj
+++ b/Libraries/OrbisLibCPP/OrbisLibCPP.vcxproj
@@ -212,7 +212,9 @@
     <ClInclude Include="OrbisDef.hpp" />
     <ClInclude Include="OrbisLib.hpp" />
     <ClInclude Include="OrbisProc.hpp" />
+    <ClInclude Include="OrbisService.hpp" />
     <ClInclude Include="OrbisTarget.hpp" />
+    <ClInclude Include="SocketListener.hpp" />
     <ClInclude Include="Sockets.hpp" />
     <ClInclude Include="sqlite3.h" />
     <ClInclude Include="stdafx.hpp" />
@@ -223,11 +225,14 @@
     <ClCompile Include="dllmain.cpp" />
     <ClCompile Include="OrbisDebugger.cpp" />
     <ClCompile Include="OrbisLib.cpp" />
-    <ClCompile Include="OrbisLibCPP.cpp" />
     <ClCompile Include="OrbisProc.cpp" />
+    <ClCompile Include="OrbisService.cpp" />
     <ClCompile Include="OrbisTarget.cpp" />
+    <ClCompile Include="SocketListener.cpp" />
     <ClCompile Include="Sockets.cpp" />
-    <ClCompile Include="sqlite3.c" />
+    <ClCompile Include="sqlite3.c">
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">NotUsing</PrecompiledHeader>
+    </ClCompile>
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Service|x64'">Create</PrecompiledHeader>
