Added Class layout for dll changed target implementation and events.
-Created class layout for targets.
-Started Implementing the Process Class.
-Targets are now stored as a dictionary for ease of use.
-Targets now are instanced to make using multiple targets easier.
-Re-organized the CPP dll.
-Added support for events to multiple targets.

--- a/Libraries/OrbisLib/OrbisLib.csproj
+++ b/Libraries/OrbisLib/OrbisLib.csproj
@@ -79,9 +79,16 @@
     <Compile Include="Classes\Events.cs" />
     <Compile Include="Classes\Imports.cs" />
     <Compile Include="Classes\OrbisDef.cs" />
-    <Compile Include="Classes\Payload.cs" />
+    <Compile Include="Classes\Target\FTP.cs" />
+    <Compile Include="Classes\Target\Payload.cs" />
     <Compile Include="Classes\Settings.cs" />
-    <Compile Include="Classes\Target.cs" />
+    <Compile Include="Classes\Target\Debug.cs" />
+    <Compile Include="Classes\Target\Process\Extension.cs" />
+    <Compile Include="Classes\Target\Process\Memory.cs" />
+    <Compile Include="Classes\Target\Process\Process.cs" />
+    <Compile Include="Classes\Target\Target.cs" />
+    <Compile Include="Classes\TargetManagement.cs" />
+    <Compile Include="Classes\Target\TargetEvents.cs" />
     <Compile Include="Classes\Utilities.cs" />
     <Compile Include="Dialog\About.cs">
       <SubType>Form</SubType>
