--- a/OrbisModuleManager/App.config
+++ b/OrbisModuleManager/App.config
@@ -2,17 +2,17 @@
 <configuration>
     <configSections>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="nsOrbisNeighborhood.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+            <section name="OrbisModuleManager.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
     <userSettings>
-        <nsOrbisNeighborhood.Properties.Settings>
-            <setting name="BINDirectory" serializeAs="String">
+        <OrbisModuleManager.Properties.Settings>
+            <setting name="SPRXDir" serializeAs="String">
                 <value />
             </setting>
-        </nsOrbisNeighborhood.Properties.Settings>
+        </OrbisModuleManager.Properties.Settings>
     </userSettings>
 </configuration>
