--- a/OrbisModuleManager/App.config
+++ b/OrbisModuleManager/App.config
@@ -10,7 +10,10 @@
     </startup>
     <userSettings>
         <OrbisModuleManager.Properties.Settings>
-            <setting name="SPRXDir" serializeAs="String">
+            <setting name="SPRXDirectory" serializeAs="String">
+                <value>/mnt/usb0/</value>
+            </setting>
+            <setting name="ELFDirectory" serializeAs="String">
                 <value />
             </setting>
         </OrbisModuleManager.Properties.Settings>
