--- a/Executables/OrbisSuiteService/OrbisSuiteService.csproj
+++ b/Executables/OrbisSuiteService/OrbisSuiteService.csproj
@@ -61,7 +61,7 @@
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>Orbis.ico</ApplicationIcon>
+    <ApplicationIcon>OrbisSettings_4496.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -114,6 +114,7 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Orbis.ico" />
+    <Content Include="OrbisSettings_4496.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
